tests/fail/fail_inisiu_with_params.kr
fn inisiu(nter x) {
    mostran(x);
}
